# ABM

./: .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 3f87231c67cd_change_id_and_user_id_to_bigint.py  68f4afad909a_initial_schema.py  7792b098f49d_initial_schema_clean.py  90c029fae876_начальная_схема.py
app/: main.py
app/api/: deps.py  test_task.py
app/api/v1/: tasks.py
app/bot/: api_client.py  bot.py  callbacks.py  run_bot.py  services.py
app/bot/handlers/: edit_task.py  forward_to_email.py  list.py  start.py  task.py  task_actions.py
app/bot/keyboards/: edit_task.py  task.py
app/core/: config.py  logging.py
app/database/: database.py
app/middlewares/: logging.py
app/models/: tasks.py
app/schemas/: marketing.py  task.py
app/services/: email_service.py  task_service.py
app/templates/emails/: marketing.html  task.html  tasks.html
app/tests/: conftest.py
app/tests/api/: test_tasks.py
app/tests/bot/: test_bot_service.py.pyi
app/tests/services/: test_email_service.py  test_task_service.py
app/utils/: files.py
scripts/: test_email.py
