[tool.poetry]
name = "abm"
version = "0.1.0"
description = ""
authors = ["Bazavod <eugeny.bazavod@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.0"
uvicorn = "^0.38.0"
pydantic-settings = "^2.12.0"
aiosmtplib = "^5.0.0"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
