[tool.poetry]
name = "abm"
version = "0.1.0"
description = ""
authors = ["Bazavod <eugeny.bazavod@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.124.0"
uvicorn = "^0.38.0"
pydantic-settings = "^2.12.0"
aiosmtplib = "^5.0.0"
jinja2 = "^3.1.6"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
aiohttp = "^3.13.2"
aiogram = "^3.23.0"
loguru = "^0.7.3"
httpx = "^0.28.1"
alembic = "^1.17.2"
asyncio = "^4.0.0"
pytest = "^9.0.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

